# batch-ansible-cli

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/commands/: describe.rs  list.rs  mod.rs  run.rs
src/utilities/: args.rs  mod.rs  parse.rs
